--- a/Pages/game.css
+++ b/Pages/game.css
@@ -1,5 +1,6 @@
   body {
-    background-image: url('../Images/tiles0.png');
+    background-image: url('../Images/tiles0.png'); 
+    margin: 0px;
   }
   #start {
     color: red;
@@ -37,7 +38,7 @@
     visibility: hidden;
   }
   body {
-    margin: 0;
+    margin: 0px;
   }
   .centered {
 
